kubernetes/service/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.gitlab.com/env: <CI_ENVIRONMENT_SLUG>
    app.gitlab.com/app: <CI_PROJECT_PATH_SLUG>
  name: mythic-table
  labels:
    app: mythic-table
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mythic-table
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 33%
  template:
    metadata:
      labels:
        app: mythic-table
    spec:
      serviceAccount: mythic-table-api-edge-ksa
      containers:
        - name: mythic-table
          image: registry.gitlab.com/mythicteam/mythictable:<VERSION>
          ports:
            - containerPort: 80
          livenessProbe:
            tcpSocket:
              port: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 2
