kubernetes/service/redis-backplane_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-backplane
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      role: backplane
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: backplane
        tier: backend
    spec:
      containers:
      - name: backplane
        image: redis:alpine
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
