kubernetes/service/loadbalancer_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mythic-table-service
  labels:
    app: mythic-table
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: mythic-table
