kubernetes/service/nodeport_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mythictable-nodeport
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: mythic-table
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
